force-app/main/default/objects/leaseworks__Campaign_Asset_Summary__c/leaseworks__Campaign_Asset_Summary__c.object-meta.xml
<CustomObject>
    <label>Campaign Asset Summary</label>
    <nameField>
        <label>Campaign Asset Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Asset Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>