force-app/main/default/objects/leaseworks__Campaign_Asset_Summary__c/fields/leaseworks__Campaign__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>leaseworks__Project__c</referenceTo>
    <relationshipLabel>Campaign Asset Summaries</relationshipLabel>
    <relationshipName>Campaign_Asset_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>