force-app/main/default/objects/leaseworks__Campaign_Asset_Summary__c/fields/leaseworks__Gross_Gain_Loss_on_Sale__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Gross_Gain_Loss_on_Sale__c</fullName>
    <label>Gross Gain/Loss on Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>