force-app/main/default/objects/leaseworks__Campaign_Asset_Summary__c/fields/leaseworks__Third_Bid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Third_Bid__c</fullName>
    <label>Third Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>